--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_PASSWORD=your_password
 DB_NAME=your_database_name
 
 # Server Configuration
-SERVER_PORT=8080
+APP_PORT=:8080
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key
