--- a/.env
+++ b/.env
@@ -1,15 +1,21 @@
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=your_username
-DB_PASSWORD=your_password
-DB_NAME=your_database_name
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=sijaki
+
+# MQTT
+MQTT_BROKER=54.255.193.69
+MQTT_PORT=1883
+MQTT_USERNAME=sijaki
+MQTT_PASSWORD=sijaki123
 
 # Server Configuration
 APP_PORT=:8080
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret_key
+JWT_SECRET=rahasia
 
 # Logging
 LOG_LEVEL=debug
